# rinha2023-fastapi

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  nginx.conf  pre-commit-config.yaml  pyproject.toml
alembic/: env.py
rinha/: config.py  main.py
rinha/db/: base.py  database.py
rinha/person/: models.py  router.py  schemas.py
